v3.7.3 (XXXX-XX-XX)
-------------------

* Added configuration option `--rocksdb.sync-delay-threshold`.
  This option can be used to track if any RocksDB WAL sync operations is 
  delayed by more than the configured value (in milliseconds). The intention
  is to get aware of severely delayed WAL sync operations.

* Add database, shard name and error information to several shard-related log
  messages.

* Display shard names of a collection in the web interface when in the details
  view of the collection.

* Added HTTP requests metrics for tracking the number of superuser and normal
  user requests separately:

  - `arangodb_http_request_statistics_superuser_requests`: Total number of HTTP
    requests executed by superuser/JWT
  - `arangodb_http_request_statistics_user_requests`: Total number of HTTP
    requests executed by clients

* Fixed a bug in handling of followers which refuse to replicate operations.
  In the case that the follower has simply been dropped in the meantime, we now
  avoid an error reported by the shard leader.

* Fix a performance regression when a LIMIT is combined with a COLLECT WITH
  COUNT INTO. Reported in ES-692.

* Fix REST handler GET /_admin/status when called with URL parameter value
  `overview=true`. For generating the `hash` attribute in the response, the
  current Plan was retrieved and analyzed. Due to a change in the internal Plan
  format the REST handler code failed to pick up the number of servers, which
  resulted in the REST handler returning HTTP 500 in cluster mode.

* Use rclone built from v1.51.0 source with go1.15.2 instead of prebuilt
  v1.51.0 release.

* Fixed a bug in AQL COLLECT with OPTIONS { "hash" } that lead to a quadratic
  runtime in the number of output rows.

* Added startup option `--database.old-system-collections` to toggle automatic
  creation of system collections `_modules` and `_fishbowl`, along with their
  internal usage. These collections are useful only in very few cases, so it